# ratit

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/: converter.cpp  converter.h  convertoptions.h  defines.h  dispatcher.cpp  dispatcher.h  main.cpp  mainwindow.cpp  mainwindow.h  taskpanel.cpp  taskpanel.h  taskwidget.cpp  taskwidget.h  worker.cpp  worker.h
